<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.team05.lecturec.ViewControllers.NewmoduleActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/moduleNameLabel"
        android:text="@string/moduleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/moduleEditField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moduleNameLabel"
        android:inputType="text"
        android:hint="@string/moduleNameHint"/>

    <TextView
        android:id="@+id/moduleNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moduleEditField"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#FF787878"
        android:textAppearance="?android:attr/textAppearanceMedium"/>


    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/deleteModuleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:background="#aaff0000"
            android:layout_weight="1"
            android:onClick="onModuleDeleteClick"/>

        <Button
            android:id="@+id/archiveModuleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:background="#aafff900"
            android:layout_weight="1"
            android:onClick="onModuleArchiveClick"/>


        <Button
            android:id="@+id/saveModuleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:background="#aa42ff00"
            android:layout_weight="2"
            android:onClick="onModuleSaveClick"/>

    </LinearLayout>




    <!-- Main Activity View's Content-->
    <android.support.v4.app.FragmentTabHost
        android:id="@+id/timeTabHost"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_above="@id/buttonsLayout"
        android:layout_below="@+id/moduleNameDisplay">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@+id/timeTabWidget"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom" />


            <FrameLayout
                android:id="@+id/timeTabContent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginTop="50dp" />

        </LinearLayout>

    </android.support.v4.app.FragmentTabHost>



</RelativeLayout>








